# HyperTrade

./: .gitignore  404.html  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  index.html  mypy.ini  package-lock.json  package.json  pyrightconfig.json  requirements.txt  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh
.github/workflows/: deploy.yml  pr-ci.yml  pr-merge.yml  test-deploy.yml
.pyre/: pyre.stderr
.trunk/: trunk.yaml
.trunk/configs/: mypy.ini
assets/js/: 0058b4c6.aa69cfb7.js  01a85c17.af6f2117.js  0995d93c.7c2b51d6.js  0e384e19.0037c6c4.js  0e384e19.42028c40.js  11dc2dbf.1765f4d6.js  14eb3368.0445a11c.js  1538.e45183ac.js  17896441.5b9c5eb0.js  18c41134.b464192f.js  18c41134.bd3a825a.js  1db82d35.b4c4a878.js  1dea6ca3.b0b7e567.js  1df93b7f.60d88995.js  1e4232ab.076cf8b6.js  1e4232ab.c220720c.js  1f391b9e.a37c5eea.js  1f8f633d.3816343b.js  2237.4864bd31.js  25150000.6c2642a7.js  3217192f.842a0c2d.js  3347.5179ad72.js  33fc5bb8.a90852eb.js  36994c47.90980b31.js  393be207.5439b218.js  393be207.b3966823.js  3a2db09e.026b1c2a.js  533a09ca.976893a6.js  533a09ca.c0236225.js  59362658.583b401f.js  59362658.985420a1.js  5c868d36.1501c332.js  5c868d36.6bfd945a.js  5e90a9b3.fe44730f.js  5e95c892.0126f081.js  621db11d.2fc582fc.js  6875c492.e68fa49b.js  6bb166bd.1da27813.js  715d46c7.5bfcb1d2.js  7195b0da.83a3a021.js  (+50 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/authors/all-sebastien-lorber-articles/: index.html
blog/authors/yangshun/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/tags/docusaurus/: index.html
blog/tags/facebook/: index.html
blog/tags/hello/: index.html
blog/tags/hola/: index.html
blog/welcome/: index.html
code/trading/assets/: BUILD.bazel
code/trading/env/: .pyre_configuration  BUILD.bazel  environment.py
code/trading/finance/: BUILD.bazel  commision.py  commission.py  order.py  transaction.py
code/trading/finance/tests/: BUILD.bazel  commission_tests.py
docs/category/tutorial---basics/: index.html
docs/category/tutorial---extras/: index.html
docs/financial-trading/: README.md  docusaurus.config.ts  package-lock.json  package.json
docs/github-pages/: README.md  docusaurus.config.ts  package.json
docs/github-pages/blog/: 2021-08-01-mdx-blog-post.mdx  authors.yml
docs/github-pages/docs/: intro.md
docs/intro/: index.html
docs/language/: python.md
docs/tutorial-basics/congratulations/: index.html
hypertrade/ai/rl/: BUILD.bazel  config.yaml  ddpg.py  env.py  utils.py
hypertrade/apps/: README.md
hypertrade/libs/: README.md
hypertrade/libs/finance/: BUILD.bazel  account.py  accounting.py  commission.py  constants.py  engine.py  event.py  locator.py  market.py  order.py  portfolio.py  simulation.py  strategy.py  time.py  transaction.py
hypertrade/libs/finance/assets/: BUILD.bazel  assets.py
hypertrade/libs/finance/data/: BUILD.bazel  datasource.py  ingest.py
hypertrade/libs/finance/data/tests/: BUILD.bazel  datasource_tests.py
hypertrade/libs/finance/data/tests/data/ohlvc/: sample.csv
hypertrade/libs/finance/execute/: BUILD.bazel  broker.py  commission.py  types.py
hypertrade/libs/finance/execute/tests/: BUILD.bazel  commission_tests.py
hypertrade/libs/finance/tests/: BUILD.bazel  accounting_tests.py  commission_tests.py  engine_tests.py  event_tests.py  portfolio_tests.py  simulation_tests.py  time_tests.py
hypertrade/libs/logging/tests/: BUILD.bazel  main_tests.py  setup_tests.py
hypertrade/libs/simulator/: BUILD.bazel  README.md  assets.py  constants.py  engine.py  event.py  market.py  market_types.py  strategy.py  typed_events.py
hypertrade/libs/simulator/data/: BUILD.bazel  datasource.py  ingest.py
hypertrade/libs/simulator/data/tests/: BUILD.bazel  datasource_tests.py
hypertrade/libs/simulator/event/: BUILD.bazel  market.py  service.py  types.py
hypertrade/libs/simulator/event/tests/: BUILD.bazel  event_tests.py
hypertrade/libs/simulator/execute/: BUILD.bazel  broker.py  commission.py  ledger.py  types.py
hypertrade/libs/simulator/execute/tests/: BUILD.bazel  broker_tests.py  commission_tests.py
hypertrade/libs/simulator/financials/: BUILD.bazel  account.py  performance.py  portfolio.py
hypertrade/libs/simulator/financials/tests/: BUILD.bazel  performance_tests.py  portfolio_tests.py
hypertrade/libs/simulator/tests/: BUILD.bazel  engine_tests.py  event_tests.py
hypertrade/libs/tsda/core/: BUILD.bazel  dataset.py  factory.py  source.py
hypertrade/libs/tsda/datasets/: BUILD.bazel  asset.py  prices.py  types.py
hypertrade/libs/tsda/datasets/tests/: BUILD.bazel  dataset_tests.py
hypertrade/libs/tsda/tests/: BUILD.bazel  dataloader_tests.py  dataset_tests.py  test.py
hypertrade/libs/tsfd/: BUILD.bazel  README.md
hypertrade/libs/tsfd/datasets/: BUILD.bazel  asset.py  types.py
hypertrade/libs/tsfd/datasets/tests/: BUILD.bazel  dataset_tests.py
hypertrade/libs/tsfd/examples/: BUILD.bazel  pytorch_dataloaders.ipynb
hypertrade/libs/tsfd/ingest/: ingest.py
hypertrade/libs/tsfd/schemas/: BUILD.bazel  default.py  macro.py  news.py  ohlvc.py  prices.py
hypertrade/libs/tsfd/sources/: BUILD.bazel  csv.py  types.py
hypertrade/libs/tsfd/sources/formats/: BUILD.bazel  default.py  macro.py  news.py  ohlvc.py  tick.py  types.py
hypertrade/libs/tsfd/sources/tests/: BUILD.bazel  csv_tests.py
hypertrade/libs/tsfd/tests/: BUILD.bazel
hypertrade/libs/tsfd/tests/data/macro/: EDIA-ECD.csv  README.md  meta_indicators.csv
hypertrade/libs/tsfd/tests/data/news/: NDAQ-MTN.csv  README.md  headline_sample.csv  helper.ipynb
hypertrade/libs/tsfd/tests/data/ohlvc/: README.md  bad_schema.csv  helper.ipynb  sample.csv
hypertrade/libs/tsfd/tests/data/tick/: README.md  helper.ipynb  sample.csv
hypertrade/libs/tsfd/utils/: BUILD.bazel  dataframe.py  time.py
hypertrade/services/: README.md
markdown-page/: index.html
python/: BUILD.bazel  notebook.py
(+35 files in other folders)
