###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

###################################################
# Python rules
# https://github.com/bazelbuild/rules_python/releases
###################################################

bazel_dep(name = "rules_python", version = "1.1.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    ignore_root_user_error = True,
    python_version = "3.10.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    # download_only = True,
    # experimental_extra_index_urls = ["https://pypi.ngc.nvidia.com"],
    # experimental_index_url = "https://pypi.org/simple",
    hub_name = "pypi",
    python_version = "3.10.12",
    requirements_lock = "//third-party:requirements_lock.txt",
)
use_repo(pip, "pypi")
