package(default_visibility = ["//visibility:public"])

py_library(
    name = "constants",
    srcs = ["constants.py"],
    data = [],
    deps = [],
)

py_library(
    name = "commission",
    srcs = ["commission.py"],
    data = [],
    deps = [
        ":order",
        ":transaction",
        "//code/trading/assets",
    ],
)

py_library(
    name = "order",
    srcs = ["order.py"],
    data = [],
    deps = ["//code/trading/assets"],
)

py_library(
    name = "transaction",
    srcs = ["transaction.py"],
    data = [],
    deps = ["//code/trading/assets"],
)
