load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "env",
    srcs = ["env.py"],
    data = [],
    deps = ["//hypertrade/libs/simulator:engine"],
)

py_library(
    name = "utils",
    srcs = ["utils.py"],
    data = [],
    deps = [],
)

py_binary(
    name = "ddpg",
    srcs = ["ddpg.py"],
    data = [],
    main = "ddpg.py",
    deps = [":env"],
)
