load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "env",
    srcs = ["env.py"],
    data = [],
    deps = [
        "//hypertrade/libs/simulator:engine",
        "//hypertrade/libs/tsfd/datasets:asset",
        requirement("exchange_calendars"),
    ],
)

py_library(
    name = "utils",
    srcs = ["utils.py"],
    data = [],
    deps = [],
)

py_binary(
    name = "ddpg",
    srcs = ["ddpg.py"],
    data = [
        "//hypertrade/ai/rl:config.yaml",
        "//hypertrade/libs/simulator/data/tests:data/ohlvc/sample.csv",
    ],
    main = "ddpg.py",
    deps = [
        ":env",
        ":utils",
        requirement("torchrl"),
        requirement("omegaconf"),
        requirement("hydra-core"),
        requirement("numpy"),
        requirement("torch"),
        requirement("tqdm"),
        requirement("tensorboard"),
    ],
)
