package(default_visibility = ["//visibility:public"])

py_library(
    name = "constants",
    srcs = ["constants.py"],
    data = [],
    deps = [],
)

py_library(
    name = "commission",
    srcs = ["commission.py"],
    data = [],
    deps = [
        ":assets",
        ":order",
        ":transaction",
    ],
)

py_library(
    name = "order",
    srcs = ["order.py"],
    data = [],
    deps = [":assets"],
)

py_library(
    name = "transaction",
    srcs = ["transaction.py"],
    data = [],
    deps = [":assets"],
)

py_library(
    name = "ledger",
    srcs = ["ledger.py"],
    data = [],
    deps = [],
)

py_library(
    name = "accounting",
    srcs = ["accounting.py"],
    data = [],
    deps = [":assets"],
)

py_library(
    name = "assets",
    srcs = ["assets.py"],
    data = [],
    deps = [],
)

py_library(
    name = "event",
    srcs = ["event.py"],
    data = [],
    deps = [":locator"],
)

py_library(
    name = "locator",
    srcs = ["locator.py"],
    data = [],
    deps = [],
)

py_library(
    name = "engine",
    srcs = ["engine.py"],
    data = [],
    deps = [":event"],
)
