package(default_visibility = ["//visibility:public"])

py_library(
    name = "constants",
    srcs = ["constants.py"],
    data = [],
    deps = [],
)

py_library(
    name = "ledger",
    srcs = ["ledger.py"],
    data = [],
    deps = [],
)

py_library(
    name = "account",
    srcs = ["account.py"],
    data = [],
    deps = [":assets"],
)

py_library(
    name = "assets",
    srcs = ["assets.py"],
    data = [],
    deps = [],
)

py_library(
    name = "event",
    srcs = ["event.py"],
    data = [],
    deps = ["//hypertrade/libs/service:locator"],
)

py_library(
    name = "engine",
    srcs = ["engine.py"],
    data = [],
    deps = [
        ":event",
        ":market",
        ":portfolio",
        ":strategy",
        "//hypertrade/libs/finance/data:datasource",
        "//hypertrade/libs/finance/execute:broker",
    ],
)

py_library(
    name = "portfolio",
    srcs = ["portfolio.py"],
    data = [],
    deps = [
        ":assets",
        ":event",
        ":market",
        "//hypertrade/libs/finance/execute:types",
        "//hypertrade/libs/service:locator",
    ],
)

py_library(
    name = "market",
    srcs = ["market.py"],
    data = [],
    deps = [
        ":assets",
        ":event",
        "//hypertrade/libs/service:locator",
    ],
)

py_library(
    name = "strategy",
    srcs = ["strategy.py"],
    data = [],
    deps = [
        ":event",
        ":market",
        ":portfolio",
        "//hypertrade/libs/finance/execute:broker",
        "//hypertrade/libs/service:locator",
    ],
)
