package(default_visibility = ["//visibility:public"])

py_library(
    name = "constants",
    srcs = ["constants.py"],
    data = [],
    deps = [],
)



py_library(
    name = "assets",
    srcs = ["assets.py"],
    data = [],
    deps = [],
)

py_library(
    name = "event",
    srcs = ["event.py"],
    data = [],
    deps = ["//hypertrade/libs/service:locator"],
)

py_library(
    name = "engine",
    srcs = ["engine.py"],
    data = [],
    deps = [
        ":event",
        ":market",
        "//hypertrade/libs/simulator/financials:portfolio",
        "//hypertrade/libs/simulator/financials:performance",
        ":strategy",
        "//hypertrade/libs/simulator/data:datasource",
        "//hypertrade/libs/simulator/execute:broker",
        "//hypertrade/libs/simulator/execute:ledger",
    ],
)

py_library(
    name = "market",
    srcs = ["market.py"],
    data = [],
    deps = [
        ":assets",
        ":event",
        "//hypertrade/libs/service:locator",
    ],
)

py_library(
    name = "strategy",
    srcs = ["strategy.py"],
    data = [],
    deps = [
        ":event",
        ":market",
        "//hypertrade/libs/simulator/financials:portfolio",
        "//hypertrade/libs/simulator/execute:broker",
        "//hypertrade/libs/service:locator",
    ],
)
