load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "constants",
    srcs = ["constants.py"],
    data = [],
    deps = [],
)

py_library(
    name = "assets",
    srcs = ["assets.py"],
    data = [],
    deps = [],
)

py_library(
    name = "engine",
    srcs = ["engine.py"],
    data = [],
    deps = [
        ":market",
        ":strategy",
        "//hypertrade/libs/simulator/event:service",
        "//hypertrade/libs/simulator/event:types",
        "//hypertrade/libs/simulator/execute:broker",
        "//hypertrade/libs/simulator/execute:ledger",
        "//hypertrade/libs/simulator/financials:performance",
        "//hypertrade/libs/simulator/financials:portfolio",
        "//hypertrade/libs/tsfd/datasets:asset",
        requirement("pandas"),
    ],
)

py_library(
    name = "market",
    srcs = ["market.py"],
    data = [],
    deps = [
        ":assets",
        ":market_types",
        "//hypertrade/libs/service:locator",
        "//hypertrade/libs/simulator/event:service",
        "//hypertrade/libs/simulator/event:types",
        requirement("pandas"),
        requirement("loguru"),
    ],
)

py_library(
    name = "market_types",
    srcs = ["market_types.py"],
    data = [],
    deps = [
        requirement("pandas"),
    ],
)

py_library(
    name = "strategy",
    srcs = ["strategy.py"],
    data = [],
    deps = [
        ":market",
        "//hypertrade/libs/service:locator",
        "//hypertrade/libs/simulator/event:service",
        "//hypertrade/libs/simulator/event:types",
        "//hypertrade/libs/simulator/execute:broker",
        "//hypertrade/libs/simulator/financials:portfolio",
        "//hypertrade/libs/tsfd/utils:time",
        requirement("pandas"),
    ],
)
