py_test(
    name = "commission_tests",
    srcs = ["commission_tests.py"],
    data = [],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/finance:commission",
    ],
)

py_test(
    name = "accounting_tests",
    srcs = ["accounting_tests.py"],
    data = [],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/finance:accounting",
    ],
)

py_test(
    name = "event_tests",
    srcs = ["event_tests.py"],
    data = [],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/finance:event",
        "//hypertrade/libs/finance:order",
        "//hypertrade/libs/logging:py_setup",
        "//hypertrade/libs/service:locator",
    ],
)
