py_test(
    name = "commission_tests",
    srcs = ["commission_tests.py"],
    data = [],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/finance:commission",
    ],
)

py_test(
    name = "portfolio_tests",
    srcs = ["portfolio_tests.py"],
    data = [],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/finance:assets",
        "//hypertrade/libs/finance:portfolio",
    ],
)

py_test(
    name = "event_tests",
    srcs = ["event_tests.py"],
    data = [],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/finance:event",
        "//hypertrade/libs/finance:order",
        "//hypertrade/libs/logging:py_setup",
        "//hypertrade/libs/service:locator",
    ],
)
