py_test(
    name = "portfolio_tests",
    srcs = ["portfolio_tests.py"],
    data = ["//hypertrade/libs/finance/data/tests:data/ohlvc/sample.csv"],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/finance:assets",
        "//hypertrade/libs/finance:event",
        "//hypertrade/libs/finance:portfolio",
        "//hypertrade/libs/finance/data:datasource",
        "//hypertrade/libs/logging:py_setup",
    ],
)

py_test(
    name = "event_tests",
    srcs = ["event_tests.py"],
    data = [],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/finance:event",
        "//hypertrade/libs/finance/execute:types",
        "//hypertrade/libs/logging:py_setup",
        "//hypertrade/libs/service:locator",
    ],
)

py_test(
    name = "engine_tests",
    srcs = ["engine_tests.py"],
    data = ["//hypertrade/libs/finance/data/tests:data/ohlvc/sample.csv"],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/finance:engine",
        "//hypertrade/libs/finance/data:datasource",
        "//hypertrade/libs/logging:py_setup",
    ],
)
