load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "account",
    srcs = ["account.py"],
    data = [],
    deps = ["//hypertrade/libs/simulator:assets"],
)

py_library(
    name = "performance",
    srcs = ["performance.py"],
    data = [],
    deps = [
        ":portfolio",
        "//hypertrade/libs/service:locator",
        "//hypertrade/libs/simulator/event:service",
        "//hypertrade/libs/simulator/event:types",
        requirement("loguru"),
        requirement("pandas"),
    ],
)

py_library(
    name = "portfolio",
    srcs = ["portfolio.py"],
    data = [],
    deps = [
        "//hypertrade/libs/service:locator",
        "//hypertrade/libs/simulator:assets",
        "//hypertrade/libs/simulator:market",
        "//hypertrade/libs/simulator/event:service",
        "//hypertrade/libs/simulator/event:types",
        "//hypertrade/libs/simulator/execute:types",
        "//hypertrade/libs/tsfd/datasets:asset",
        "//hypertrade/libs/tsfd/sources:csv",
        "//hypertrade/libs/tsfd/sources/formats:ohlvc",
        requirement("loguru"),
        requirement("pandas"),
        requirement("pandera"),
    ],
)
