load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "event_tests",
    srcs = ["event_tests.py"],
    data = [],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/logging:py_setup",
        "//hypertrade/libs/service:locator",
        "//hypertrade/libs/simulator:event",
        "//hypertrade/libs/simulator/execute:types",
    ],
)

py_test(
    name = "engine_tests",
    srcs = ["engine_tests.py"],
    data = ["//hypertrade/libs/simulator/data/tests:data/ohlvc/sample.csv"],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/logging:py_setup",
        "//hypertrade/libs/simulator:engine",
        "//hypertrade/libs/tsfd/datasets:asset",
    ],
)
