load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "engine_tests",
    srcs = ["engine_tests.py"],
    data = ["//hypertrade/libs/simulator/data/tests:data/ohlvc/sample.csv"],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/logging:py_setup",
        "//hypertrade/libs/simulator:engine",
        "//hypertrade/libs/simulator/event:types",
        "//hypertrade/libs/tsfd/datasets:asset",
        "//hypertrade/libs/tsfd/utils:time",
        requirement("pandas"),
        requirement("exchange_calendars"),
        requirement("pytz"),
        requirement("loguru"),
    ],
)
