package(default_visibility = ["//visibility:public"])

py_library(
    name = "types",
    srcs = ["types.py"],
    data = [],
    deps = [
        "//hypertrade/libs/tsda/sources:types",
    ],
)

py_library(
    name = "asset",
    srcs = ["asset.py"],
    data = [],
    deps = [
        ":types"
    ],
)