package(default_visibility = ["//visibility:public"])

py_library(
    name = "all",
    srcs = [],
    data = [],
    deps = [
        ":types",
        ":asset",
    ],
)

py_library(
    name = "types",
    srcs = ["types.py"],
    data = [],
    deps = [
        "//hypertrade/libs/tsfd/sources:types",
    ],
)

py_library(
    name = "asset",
    srcs = ["asset.py"],
    data = [],
    deps = [
        ":types",
        "//hypertrade/libs/tsfd/schemas:ohlvc",
    ],
)