load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "all",
    srcs = [],
    data = [],
    deps = [
        ":macro",
        ":news",
        ":ohlvc",
    ],
)

py_library(
    name = "ohlvc",
    srcs = ["ohlvc.py"],
    data = [],
    deps = [],
)

py_library(
    name = "news",
    srcs = ["news.py"],
    data = [],
    deps = [],
)

py_library(
    name = "macro",
    srcs = ["macro.py"],
    data = [],
    deps = [],
)
