package(default_visibility = ["//visibility:public"])

py_library(
    name = "all",
    srcs = [],
    data = [],
    deps = [
        ":csv",
        ":types",
    ],
)

py_library(
    name = "csv",
    srcs = ["csv.py"],
    data = [],
    deps = [":types", "//hypertrade/libs/tsfd/utils:time"],
)

py_library(
    name = "types",
    srcs = ["types.py"],
    data = [],
    deps = ["//hypertrade/libs/tsfd/sources/formats:types"],
)