load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//hypertrade/libs/tsfd:__subpackages__"])

py_library(
    name = "time",
    srcs = ["time.py"],
    data = [],
    deps = [],
)

py_library(
    name = "dataframe",
    srcs = ["dataframe.py"],
    data = [],
    deps = [],
)
