load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "commission_tests",
    srcs = ["commission_tests.py"],
    data = [],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/simulator/execute:commission",
        "//hypertrade/libs/tsfd/utils:time",
    ],
)
