load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "portfolio_tests",
    srcs = ["portfolio_tests.py"],
    data = ["//hypertrade/libs/simulator/data/tests:data/ohlvc/sample.csv"],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/logging:py_setup",
        "//hypertrade/libs/simulator:assets",
        "//hypertrade/libs/simulator:event",
        "//hypertrade/libs/simulator/data:datasource",
        "//hypertrade/libs/simulator/financials:portfolio",
    ],
)

py_test(
    name = "performance_tests",
    srcs = ["performance_tests.py"],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/logging:py_setup",
        "//hypertrade/libs/simulator/financials:performance",
    ],
)
