load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "portfolio_tests",
    srcs = ["portfolio_tests.py"],
    data = ["//hypertrade/libs/simulator/data/tests:data/ohlvc/sample.csv"],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/logging:py_setup",
        "//hypertrade/libs/simulator:assets",
        "//hypertrade/libs/simulator/event:service",
        "//hypertrade/libs/simulator/event:types",
        "//hypertrade/libs/simulator/financials:portfolio",
        "//hypertrade/libs/tsfd/datasets:asset",
        "//hypertrade/libs/tsfd/utils:time",
        requirement("loguru"),
        requirement("pandas"),
        requirement("pytz"),
        requirement("exchange_calendars"),
    ],
)

py_test(
    name = "performance_tests",
    srcs = ["performance_tests.py"],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/logging:py_setup",
        "//hypertrade/libs/simulator/financials:performance",
        "//hypertrade/libs/tsfd/utils:time",
        requirement("pandas"),
    ],
)
