py_test(
    name = "dataset_tests",
    srcs = ["dataset_tests.py"],
    data = ["//hypertrade/libs/tsfd/tests:data/ohlvc/sample.csv"],
    deps = [
        "//hypertrade/libs/debugging:python_debugger",
        "//hypertrade/libs/tsfd/sources:csv",
        "//hypertrade/libs/tsfd/datasets:asset",
        "//hypertrade/libs/tsfd/sources/formats:ohlvc",
    ]
)