package(default_visibility = ["//visibility:public"])

py_library(
    name = "all",
    srcs = [],
    data = [],
    deps = [
        ":ohlvc",
        ":news",
        ":macro",
        ":types",
    ],
)

py_library(
    name = "ohlvc",
    srcs = ["ohlvc.py"],
    data = [],
    deps = [
        ":types", 
        "//hypertrade/libs/tsfd/datasets:asset", 
        "//hypertrade/libs/tsfd/schemas:ohlvc"
    ],
)

py_library(
    name = "macro",
    srcs = ["macro.py"],
    data = [],
    deps = [
        ":types",
        "//hypertrade/libs/tsfd/schemas:macro"
    ],
)

py_library(
    name = "news",
    srcs = ["news.py"],
    data = [],
    deps = [
        ":types", 
        "//hypertrade/libs/tsfd/schemas:news"
    ],
)

py_library(
    name = "types",
    srcs = ["types.py"],
    data = [],
    deps = [],
)
